# simple-mcp-client

./: .gitignore  LICENSE  README.md  pyproject.toml
shell/: install.dev.sh  install.sh  pre_run.sh  run.docker.sh  run.sh
src/mcx/: __init__.py  cli.py  mcp_client.py  mcp_config.py  output_formatter.py  requirements.in  requirements.txt
